--- a/cgiAPI/cgiAPI.csproj
+++ b/cgiAPI/cgiAPI.csproj
@@ -187,8 +187,13 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Address.cs" />
+    <Compile Include="Models\Availability.cs" />
+    <Compile Include="Models\Branch.cs" />
+    <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\Employer.cs" />
     <Compile Include="Models\JobOffer.cs" />
+    <Compile Include="Models\Job_Type.cs" />
     <Compile Include="Models\SkillType.cs" />
     <Compile Include="Models\User.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
