--- a/cgiAPI/cgiAPI.csproj
+++ b/cgiAPI/cgiAPI.csproj
@@ -196,6 +196,7 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Employee.cs" />
     <Compile Include="Models\RespondVacancyUser.cs" />
     <Compile Include="Models\Address.cs" />
     <Compile Include="Models\Availability.cs" />
